src/test/deca/codegen/valid/homemade/test/test_complet_dernier_entier.deca
{
    int x  = 2147483647;
    println("x = ", (x));
}