src/test/deca/codegen/invalid/homemade/test/test_complet_div_int_0.deca
{

    int x = 10;
    int y = 0;
    println("x / y = ",(x / y));
}
